# vibecraft

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
assets/shaders/: block.frag  block.vert  hud.frag  hud.vert  hud_tex.frag  hud_tex.vert
docs/milestones/: milestone_01_project_scaffolding.md  milestone_02_math_utilities.md  milestone_03_block_registry.md  milestone_04_chunk_data.md  milestone_05_noise_generation.md  milestone_06_chunk_meshing.md  milestone_07_player_physics.md  milestone_08_world_chunk_manager.md  milestone_09_window_gl_render.md  milestone_10_texture_atlas.md  milestone_11_terrain_generation.md  milestone_12_input_handling.md  milestone_13_block_interaction.md  milestone_14_greedy_meshing.md  milestone_15_lighting.md  milestone_16_biome_system.md  milestone_17_caves_ores.md  milestone_18_inventory_hud.md  milestone_19_day_night_cycle.md  milestone_20_audio.md  milestone_21_fluid_simulation.md  milestone_22_world_persistence.md  milestone_23_particles_weather.md  milestone_24_ui_devtools_polish.md
include/vibecraft/: aabb.h  audio.h  biome.h  bitmap_font.h  block.h  block_interaction.h  camera.h  cave_generator.h  chunk.h  chunk_mesher.h  chunk_renderer.h  debug_overlay.h  fluid.h  game_loop.h  hud.h  input.h  inventory.h  lighting.h  math_utils.h  mesh.h  noise.h  ore_generator.h  particle.h  player.h  raycast.h  region.h  renderer.h  screen.h  settings.h  shader.h  sky.h  terrain_generator.h  texture_atlas.h  weather.h  window.h  world.h  world_save.h
src/: aabb.cpp  audio.cpp  biome.cpp  bitmap_font.cpp  block.cpp  block_interaction.cpp  camera.cpp  cave_generator.cpp  chunk.cpp  chunk_mesher.cpp  chunk_renderer.cpp  debug_overlay.cpp  fluid.cpp  game_loop.cpp  hud.cpp  input.cpp  inventory.cpp  lighting.cpp  main.cpp  math_utils.cpp  noise.cpp  ore_generator.cpp  particle.cpp  player.cpp  raycast.cpp  region.cpp  renderer.cpp  screen.cpp  settings.cpp  shader.cpp  sky.cpp  stb_image_impl.cpp  terrain_generator.cpp  texture_atlas.cpp  vibecraft.cpp  weather.cpp  window.cpp  world.cpp  world_save.cpp
tests/: test_aabb.cpp  test_audio.cpp  test_biome.cpp  test_bitmap_font.cpp  test_block_interaction.cpp  test_block_registry.cpp  test_build_system.cpp  test_camera.cpp  test_caves_ores.cpp  test_chunk.cpp  test_chunk_mesher.cpp  test_day_night.cpp  test_debug_overlay.cpp  test_fluid.cpp  test_game_loop.cpp  test_greedy_meshing.cpp  test_input.cpp  test_inventory.cpp  test_lighting.cpp  test_math_utils.cpp  test_noise.cpp  test_particles.cpp  test_player_physics.cpp  test_raycast.cpp  test_shader.cpp  test_terrain_gen.cpp  test_texture_atlas.cpp  test_ui_settings.cpp  test_weather.cpp  test_world.cpp  test_world_save.cpp
